# orderbooks-rs

./: Cargo.toml  LICENSE  Makefile  README.md  Settings.toml  TestSettings.toml  build.rs
proto/: orderbook.proto
src/: app_config.rs  client.rs  exchange.rs  exchange_service.rs  main.rs  metrics.rs  orderbook_aggregator.rs  orderbook_data.rs  result.rs  server.rs
src/exchange/: binance.rs  bitstamp.rs  bybit.rs  mod.rs
