[package]
name = "orderbooks-rs"
description = "Streams order book information from multiple exchanges"
version = "0.0.1"
authors = ["Jason Goodwin"]
license-file = "LICENSE"

rust-version = "1.56"
edition = "2021"

[dependencies]
config = "0.13.2"
env_logger = "0.9.3"
log = "0.4.17"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"