[package]
name = "orderbooks-rs"
description = "Streams order book information from multiple exchanges"
version = "0.0.1"
authors = ["Jason Goodwin"]
license-file = "LICENSE"

rust-version = "1.56"
edition = "2021"

[profile.release]
lto = "fat" 
codegen-units = 1

[build-dependencies]
tonic-build = "0.8"

[dependencies]
async-stream = "0.2"
async-trait = "0.1.58"
config = "0.13.2"
env_logger = "0.9.3"
futures-core = "0.3"
futures-util = "0.3"
log = "0.4.17"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
prost = "0.11"
serde = "*"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] } # TODO the features included should be reduced!
tokio-stream = "0.1"
tonic = "0.8"
tokio-tungstenite = { version = "*", features = ["tls"] }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
